test/types/range/stonea/countedRangeBy-2.good
countedRangeBy-2.chpl:1: error: the first argument of the 'by' operator is not a range
