test/types/range/stonea/countedRangeBy-2.chpl
for i in 2..#(4 by 2) do
    write(i, " ");
